Add fix discount + correct generation of required attribut in input

--- a/Pages/Customer/Edit.cshtml
+++ b/Pages/Customer/Edit.cshtml
@@ -71,7 +71,9 @@
         {"CurrentlyBorrowedList",
           Model.CurrentlyBorrowedList},
         {"ShouldBeRemovedArray",
-            Model.ShouldBeRemovedArray}
+            Model.ShouldBeRemovedArray},
+        {"CustomDiscount",
+            Model.CustomDiscount}
       })
   }
 }
