--- a/Pages/Customer/ShowAll.cshtml
+++ b/Pages/Customer/ShowAll.cshtml
@@ -38,13 +38,16 @@
     @Html.DisplayNameFor(model => model.AbstractEntities[0].Lastname)
   </th>
   <th>
-    @Html.DisplayNameFor(model => model.AbstractEntities[0].Birthdate)
-  </th>
-  <th>
     @Html.DisplayNameFor(model => model.AbstractEntities[0].Society)
   </th>
   <th>
-    @Html.DisplayNameFor(model => model.AbstractEntities[0].Address)
+    @Html.DisplayNameFor(model => model.AbstractEntities[0].AddressStreet)
+  </th>
+  <th>
+    @Html.DisplayNameFor(model => model.AbstractEntities[0].AddressCity)
+  </th>
+  <th>
+    @Html.DisplayNameFor(model => model.AbstractEntities[0].AddressCountry)
   </th>
   <th>
     @Html.DisplayNameFor(model => model.AbstractEntities[0].Phone)
@@ -53,7 +56,20 @@
     @Html.DisplayNameFor(model => model.AbstractEntities[0].Email)
   </th>
   <th>
-    @Html.DisplayNameFor(model => model.AbstractEntities[0].CurrentlyBorrowed)
+    @Html.DisplayNameFor(model => model.AbstractEntities[0].Birthdate)
+  </th>
+  <th>
+    @Html.DisplayNameFor(model => model.AbstractEntities[0].IsUnemployed)
+  </th>
+  <th>
+    @Html.DisplayNameFor(model => model.AbstractEntities[0].IsStudent)
+  </th>
+  <th>
+    @Html.DisplayNameFor(model => model.AbstractEntities[0].PeopleWithDisabilities)
+  </th>
+
+  <th>
+    Articles
   </th>
 }
 
