--- a/Pages/Customer/_DetailsPartialView.cshtml
+++ b/Pages/Customer/_DetailsPartialView.cshtml
@@ -2,46 +2,76 @@
 @model Customer
 
 <dt class="col-sm-2">
-  @Html.DisplayNameFor(model => model.Firstname)
+    @Html.DisplayNameFor(model => model.Firstname)
 </dt>
 <dd class="col-sm-10">
-  @Html.DisplayFor(model => model.Firstname)
+    @Html.DisplayFor(model => model.Firstname)
 </dd>
 <dt class="col-sm-2">
-  @Html.DisplayNameFor(model => model.Lastname)
+    @Html.DisplayNameFor(model => model.Lastname)
 </dt>
 <dd class="col-sm-10">
-  @Html.DisplayFor(model => model.Lastname)
+    @Html.DisplayFor(model => model.Lastname)
 </dd>
 <dt class="col-sm-2">
-  @Html.DisplayNameFor(model => model.Birthdate)
+    @Html.DisplayNameFor(model => model.Society)
 </dt>
 <dd class="col-sm-10">
-  @Html.DisplayFor(model => model.Birthdate)
+    @Html.DisplayFor(model => model.Society)
 </dd>
 <dt class="col-sm-2">
-  @Html.DisplayNameFor(model => model.Society)
+    @Html.DisplayNameFor(model => model.AddressStreet)
 </dt>
 <dd class="col-sm-10">
-  @Html.DisplayFor(model => model.Society)
+    @Html.DisplayFor(model => model.AddressStreet)
 </dd>
 <dt class="col-sm-2">
-  @Html.DisplayNameFor(model => model.Address)
+    @Html.DisplayNameFor(model => model.AddressCity)
 </dt>
 <dd class="col-sm-10">
-  @Html.DisplayFor(model => model.Address)
+    @Html.DisplayFor(model => model.AddressCity)
 </dd>
 <dt class="col-sm-2">
-  @Html.DisplayNameFor(model => model.Phone)
+    @Html.DisplayNameFor(model => model.AddressCountry)
 </dt>
 <dd class="col-sm-10">
-  @Html.DisplayFor(model => model.Phone)
+    @Html.DisplayFor(model => model.AddressCountry)
 </dd>
 <dt class="col-sm-2">
-  @Html.DisplayNameFor(model => model.Email)
+    @Html.DisplayNameFor(model => model.Phone)
 </dt>
 <dd class="col-sm-10">
-  @Html.DisplayFor(model => model.Email)
+    @Html.DisplayFor(model => model.Phone)
+</dd>
+<dt class="col-sm-2">
+    @Html.DisplayNameFor(model => model.Email)
+</dt>
+<dd class="col-sm-10">
+    @Html.DisplayFor(model => model.Email)
+</dd>
+<dt class="col-sm-2">
+    @Html.DisplayNameFor(model => model.Birthdate)
+</dt>
+<dd class="col-sm-10">
+    @Html.DisplayFor(model => model.Birthdate)
+</dd>
+<dt class="col-sm-2">
+    @Html.DisplayNameFor(model => model.IsUnemployed)
+</dt>
+<dd class="col-sm-10">
+    @Html.DisplayFor(model => model.IsUnemployed)
+</dd>
+<dt class="col-sm-2">
+    @Html.DisplayNameFor(model => model.IsStudent)
+</dt>
+<dd class="col-sm-10">
+    @Html.DisplayFor(model => model.IsStudent)
+</dd>
+<dt class="col-sm-2">
+    @Html.DisplayNameFor(model => model.PeopleWithDisabilities)
+</dt>
+<dd class="col-sm-10">
+    @Html.DisplayFor(model => model.PeopleWithDisabilities)
 </dd>
 
 <dt>
