Add DirectedBy and GenreStyle to Film

--- a/Pages/Film/ShowAll.cshtml
+++ b/Pages/Film/ShowAll.cshtml
@@ -38,8 +38,16 @@
   <th>
     @Html.DisplayNameFor(model => model.AbstractEntities[0].ReleaseDate)
   </th>
+
   <th>
     Count borrowing
+  </th>
+
+  <th>
+    @Html.DisplayNameFor(model => model.AbstractEntities[0].DirectedBy)
+  </th>
+  <th>
+    @Html.DisplayNameFor(model => model.AbstractEntities[0].GenreStyle)
   </th>
 }
 
