--- a/Pages/Film/_DetailsPartialView.cshtml
+++ b/Pages/Film/_DetailsPartialView.cshtml
@@ -19,6 +19,19 @@
 <dd class="col-sm-10">
   @Html.DisplayFor(model => model.ReleaseDate)
 </dd>
+<dt class="col-sm-2">
+  @Html.DisplayNameFor(model => model.DirectedBy)
+</dt>
+<dd class="col-sm-10">
+  @Html.DisplayFor(model => model.DirectedBy)
+</dd>
+<dt class="col-sm-2">
+  @Html.DisplayNameFor(model => model.GenreStyle)
+</dt>
+<dd class="col-sm-10">
+  @Html.DisplayFor(model => model.GenreStyle)
+</dd>
+
 <dt>
 @Html.DisplayNameFor(model => model.Articles)
 </dt>
