--- a/Pages/Film/_ShowAllTbody.cshtml
+++ b/Pages/Film/_ShowAllTbody.cshtml
@@ -13,8 +13,16 @@
 <td>
   @Html.DisplayFor(modelItem => item.ReleaseDate)
 </td>
+
 <td>
   @Html.DisplayFor(modelItem => item.Articles.Count)
+</td>
+
+<td>
+  @Html.DisplayFor(modelItem => item.DirectedBy)
+</td>
+<td>
+  @Html.DisplayFor(modelItem => item.GenreStyle)
 </td>
 
 <!-- vim:sw=2:ts=2:et:fileformat=dos
