--- a/Pages/Film/_FormPartialView.cshtml
+++ b/Pages/Film/_FormPartialView.cshtml
@@ -26,6 +26,17 @@
   <span asp-validation-for="ReleaseDate" class="text-danger"></span>
 </div>
 <div class="form-group">
+  <label asp-for="DirectedBy" class="control-label"></label>
+  <input asp-for="DirectedBy" class="form-control" />
+  <span asp-validation-for="DirectedBy" class="text-danger"></span>
+</div>
+<div class="form-group">
+  <label asp-for="GenreStyle" class="control-label"></label>
+  <select asp-for="GenreStyle" class="form-control"></select>
+  <span asp-validation-for="GenreStyle" class="text-danger"></span>
+</div>
+
+<div class="form-group">
   <label asp-for="@NumberOfNewArticles" class="control-label"></label>
   <!-- Generate required input with ASP.NET 2.2-->
   <input asp-for="@NumberOfNewArticles" class="form-control" />
