--- a/wwwroot/styles/customer-create-edit.css
+++ b/wwwroot/styles/customer-create-edit.css
@@ -21,16 +21,14 @@ select[name='articleLoanDuration'] {
 .grid-container-article-loan-duration {
   display: grid;
   grid-template-columns: auto auto auto auto auto;
-  grid-template-rows:    auto auto;
+  grid-template-rows:    auto;
 }
 
 .grid-container-should-be-removed,
 .grid-container-article-loan-duration {
   grid-row-gap: 1em;
   grid-column-gap: 2em;
-  align-content: space-around;
-  justify-content: center;
-  align-items: center;
+  align-items: space-around;
   justify-items: center;
   padding: 1em;
 }
