--- a/Pages/Article/_DetailsPartialView.cshtml
+++ b/Pages/Article/_DetailsPartialView.cshtml
@@ -48,13 +48,21 @@
   @Html.DisplayNameFor(model => model.BorrowingDate)
 </dt>
 <dd class="col-sm-10">
-  @Html.DisplayFor(model => model.BorrowingDate)
+  @if (Model.BorrowingDate != null)
+  {
+    @(TimeZoneInfo.ConvertTimeFromUtc((DateTime)Model.BorrowingDate,
+    TimeZoneInfo.Local))
+  }
 </dd>
 <dt class="col-sm-2">
   @Html.DisplayNameFor(model => model.ReturnDate)
 </dt>
 <dd class="col-sm-10">
-  @Html.DisplayFor(model => model.ReturnDate)
+  @if (Model.ReturnDate != null)
+  {
+    @(TimeZoneInfo.ConvertTimeFromUtc((DateTime)Model.ReturnDate,
+        TimeZoneInfo.Local))
+  }
 </dd>
 <dt class="col-sm-2">
   @Html.DisplayNameFor(model => model.BorrowerId)
