In Page/Customer folder, remove Partial Class inheritance Details <- Create <- Edit

--- a/Pages/Customer/Create.cshtml
+++ b/Pages/Customer/Create.cshtml
@@ -1,5 +1,5 @@
 @page "{handler?}"
-@model Videotheque.Pages.CustomerPage.Crud
+@model Videotheque.Pages.CustomerPage.Create
 
 @{
   Layout = "../Layout/_CreateOrEdit.cshtml";
