--- a/Pages/Customer/Details.cshtml
+++ b/Pages/Customer/Details.cshtml
@@ -1,5 +1,5 @@
 @page "{id:int}/{handler?}"
-@model Videotheque.Pages.CustomerPage.Crud
+@model Videotheque.Pages.CustomerPage.Details
 
 @{
   Layout = "../Layout/_Details.cshtml";
