--- a/Pages/Customer/Edit.cshtml
+++ b/Pages/Customer/Edit.cshtml
@@ -1,6 +1,6 @@
 @page "{id:int}/{handler?}"
 @using Videotheque.Data
-@model Videotheque.Pages.CustomerPage.Crud
+@model Videotheque.Pages.CustomerPage.Edit
 
 @{
   Layout = "../Layout/_CreateOrEdit.cshtml";
