--- a/Pages/Customer/_FormPartialView.cshtml
+++ b/Pages/Customer/_FormPartialView.cshtml
@@ -217,7 +217,7 @@
 </thead>
 <tbody>
 @for (int index=0 ;
-      index < Crud.NumberInputArticleToBorrow ;
+      index < Create.NumberInputArticleToBorrow ;
       index++)
 {
   int loanDuration;
